bug 129808 Preferences panel accelerator keys don't work when category tree or if OK/Cancel/Help buttons have focus r=bryner,sr=bzbarsky Factoring out the HandleAccessKey method of EventStateManager, checking all sub docShell's accesskey and if necessary, bubbling up to the parent docShell's EventStateManager's HandleAccessKey method.